some css changes to attempt to fix weird burger menu not showing up, plus new resume

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
     right: 3%;
     top: 3%;
     z-index:2000 !important;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
   }
   p.aboutText{
     text-align:start;
@@ -58,7 +58,8 @@
     z-index: 1000;
     width:100%;
     height:100%;
-    padding-top:40px;
+    padding-top:50px;
+    padding-bottom: 40px;
     margin:0;
     top:0;
   }
@@ -67,6 +68,7 @@
     right: 3%;
     top: 3%;
     z-index:2000 !important;
+    padding-bottom: 20px;
   }
   .navbar.responsive a {
     float: none;
@@ -87,13 +89,13 @@
 }
 
 img#burger {
-  max-width: 30px;
-  max-height: 30px;
+  max-width: 50px;
+  max-height: 50px;
   position: fixed;
   right: 3%;
   top:3%;
   z-index:2000 !important;
-  padding:none;
+  padding-bottom:20px;
 }
 
 p#warning{
@@ -135,6 +137,7 @@ li .responsiveItem a{
     overflow:hidden;
     animation: fadein 4s; 
     min-height: 35%;
+    z-index: 10;
 }
 body {
   margin: 0;
@@ -177,12 +180,6 @@ body {
   animation-fill-mode: forwards;
 }
 
-/* .navbarItem {
-  float: left;
-}
-.navbarItemRight {
-  float: right;
-} */
 .mainPage {
   border:0;
   margin:0;
@@ -195,6 +192,7 @@ body {
   text-align: center;
   animation: fadein 4s;
   color:white;
+  z-index: -10;
 }
 
 @keyframes biggerFont{
